# xray-json-generator

./: .env.sample  .gitignore  config_creator.py  config_type.py  pyproject.toml  server_config.py  test.py  utils.py  v2ray_config.py  v2ray_config_util.py
apps/: check_status.py  config_generat.py  main.py
apps/xray_json_generator/: config_creator.py  config_type.py  consts.py  server_config.py  utils.py  xray_config.py  xray_config_util.py
core/handlers/: uri_handler.py  xray_handler.py
core/settings/: __init__.py  common.py  logging.py
