[tool.poetry]
name = "xray-json-creator"
version = "0.1.0"
description = ""
authors = ["nobody"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
autoutils = "^0.7.0"
fastapi = "^0.103.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
